# cunhaobot

./: .env.example  .gcloudignore  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLI.md  CONTEXT.md  Pipfile  README.md  TESTING.md  app.yaml.example  conftest.py  constants.py  coverage_report.txt  cron.yaml  cron.yaml.example  cunaobot_song.js  deploy.sh  dev.sh  docker-compose.yml  entry_point_test.py  feature_parity.md  ideas.md  latest_logs.txt  listing.md  logs.txt  main.py  main_test.py  prod_local.sh  pyproject.toml  requirements.txt  secrets  web_test.py
.gemini/commands/: ideas.toml  push.toml  refactor.toml
.gemini/skills/: PATTERNS.md  README.md  SKILL.md  TESTING.md
.github/workflows/: deploy.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/code_styleguides/: python.md
docs/: domain-code-map.md  game_design.md  game_design_el_bruto.md  game_development_plan.md  music_pattern.strudel
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
golang/: go.mod  go.sum  main.go
golang/datastore/: database.go  database_test.go  export_test.go  users.go  users_test.go
golang/entities/: users.go  users_test.go
handlers/: __init__.py  about.py  callback_query.py  chosen_inine_result.py  error.py  help.py  inline_query.py  ping.py  start.py  stop.py  submit.py  text_message.py
handlers/inline_query/: audio_mode.py  base.py  long_mode.py  short_mode.py
markup/: keyboards.py
models/: phrase.py  phrase_test.py  proposal.py  proposal_test.py  report.py  schedule.py  schedule_test.py  user.py
models/tests/: report_test.py  test_phrase.py  user_test.py
scripts/: stickers.py  sync_datastore_keys.py
slack/: attachments.py  auth.py  init_test.py
slack/handlers/: __init__.py
slack/tests/: interactivity_init_test.py  test_handlers.py
src/: admin_web_test.py  approve_web_test.py  broadcast_test.py  conftest.py  main.py  main_test.py  metrics_web_test.py  orphans_web_test.py  test_factories.py  tg_premium_test.py  tg_profile_test.py  user_service_privacy_test.py  web_profile_test.py  web_test.py
src/api/: __init__.py  admin.py  audio_endpoint_test.py  bot.py  game.py  game_test.py  slack.py  slack_oauth_test.py  utils.py  web.py
src/core/: config.py  config_test.py  container.py  di.py
src/infrastructure/: protocols.py
src/models/: chat.py  gift.py  link_request.py  phrase.py  phrase_test.py  poster_request.py  proposal.py  proposal_test.py  report.py  report_test.py  schedule.py  schedule_test.py  slack.py  usage.py  user.py  user_test.py
src/scripts/: analyze_data.py  award_and_notify_special_badges.py  backfill_data.py  check_orphans_web.py  check_voting_ended.py  cleanup_voting_status.py  debug_known_users.py  heal_proposals.py  (+16 more)
templates/: base.html  index.html
tests/: test_main.py
tg/: __init__.py  constants.py  decorators.py  stickers.py  text_router.py
utils/: __init__.py  decorators.py  gcp.py  gcp_test.py  user.py
(+235 files in other folders)
