[project]
name = "cunhaobot"
version = "0.1.0"
description = "A multi-platform chatbot for cuñao phrases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=20.0",
    "google-cloud-datastore",
    "flask",
    "boto3",
    "google-cloud-storage",
    "pytz",
    "fuzzywuzzy",
    "pillow>=11.0.0",
    "tweepy",
    "gunicorn",
    "urllib3<2",
    "asgiref",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = false
