[project]
name = "cunhaobot"
version = "0.1.0"
description = "A multi-platform chatbot for cuñao phrases."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot>=20.0",
    "google-cloud-datastore",
    "google-cloud-storage",
    "pytz",
    "fuzzywuzzy",
    "pillow>=11.0.0",
    "tweepy",
    "gunicorn",
    "asgiref",
    "levenshtein",
    "litestar>=2.19.0",
    "uvicorn>=0.40.0",
    "urllib3>=2.0.0",
    "jinja2>=3.1.6",
    "cryptography>=46.0.3",
    "google-genai>=1.56.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.ty]
[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["**/tests/**", "**/*_test.py", "src/scripts/**"]

[tool.ty.rules]
possibly-missing-attribute = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"
invalid-return-type = "warn"
invalid-type-form = "warn"
missing-argument = "warn"
unsupported-operator = "warn"
invalid-raise = "warn"
unknown-argument = "error"
invalid-argument-type = "warn"

[tool.ruff]
exclude = ["src/scripts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = "*_test.py"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["src/scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
